--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,5 +3,7 @@ parameters:
     paths:
         - "%currentWorkingDirectory%/src/"
         - "%currentWorkingDirectory%/tests/"
+    ignoreErrors:
+        - '~on an unknown class PHPUnit\\Framework\\MockObject\\InvocationMocker\.$~'
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
