--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - composer self-update
 
 install:
-  - if [[ "$(phpenv version-name)" == "nightly" ]]; then composer update --ignore-platform-reqs; else composer install --dev --prefer-source; fi;
+  - if [[ "$(phpenv version-name)" == "nightly" ]]; then composer update --ignore-platform-reqs; else composer install --prefer-source; fi;
 
 script:
   - vendor/bin/phpunit
