--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.3 || ^8.0",
     "ext-intl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "infection/infection": "^0.17",
+    "phpunit/phpunit": "^9.5",
+    "infection/infection": "^0.20",
     "phpstan/phpstan": "^0.12",
     "phpstan/phpstan-phpunit": "^0.12",
-    "psalm/plugin-phpunit": "^0.10",
-    "vimeo/psalm": "^3.14"
+    "psalm/plugin-phpunit": "^0.15",
+    "vimeo/psalm": "^4.3"
   },
   "autoload": {
     "psr-4": {
