--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "phpstan/phpstan-phpunit": "^0.12",
     "phpunit/phpunit": "^9.5",
     "psalm/plugin-phpunit": "^0.15",
-    "vimeo/psalm": "^4.3"
+    "vimeo/psalm": "^4.3",
+    "doctrine/coding-standard": "^8.2"
   },
   "autoload": {
     "psr-4": {
