--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,4 +38,4 @@ jobs:
       run: vendor/bin/phpunit
 
     - name: "Mutation tests"
-      run: phpdbg -qrr vendor/bin/infection --min-msi=100 --no-progress --threads=5
+      run: vendor/bin/infection --min-msi=100 --no-progress --threads=5
