--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
          - php-versions: "8.0"
            continue-on-error: false
          - php-versions: "8.1"
+           continue-on-error: false
+         - php-versions: "8.2"
            continue-on-error: true
 
     steps:
@@ -36,11 +38,11 @@ jobs:
         extensions: "intl, xdebug"
 
     - name: "Install dependencies"
-      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions != '8.1'
+      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions != '8.2'
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: "Install dependencies"
-      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions == '8.1'
+      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions == '8.2'
       run: composer install --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
 
     - name: "Unit + Integration"
