--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          bootstrap="./vendor/autoload.php"
-         backupGlobals="false"
          verbose="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         stopOnFailure="false"
-         processIsolation="false"
          executionOrder="random"
-         resolveDependencies="true"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd">
-  <coverage includeUncoveredFiles="true">
+  <coverage>
     <include>
       <directory suffix=".php">src</directory>
     </include>
   </coverage>
   <testsuite name="classes">
-    <directory suffix="Test.php">tests</directory>
+    <directory>tests</directory>
   </testsuite>
 </phpunit>
