Allow phpcs and infection plugins in composer

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,11 @@
       "Budgegeria\\IntlSort\\Tests\\": "tests/"
     }
   },
-  "prefer-stable": true
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "infection/extension-installer": true
+    }
+  }
 }
