--- a/infection.json.dist
+++ b/infection.json.dist
@@ -19,6 +19,11 @@
             "ignore": [
                 "*"
             ]
+        },
+        "CastObject": {
+            "ignore": [
+                "Budgegeria\\IntlSort\\Comparator\\ValueObject"
+            ]
         }
     }
 }
