--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,4 +1,4 @@
-name: Static Analysis
+name: "Static Analysis"
 
 on:
   - "push"
@@ -7,10 +7,10 @@ on:
 jobs:
   analysis:
 
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: "actions/checkout@v2"
 
     - name: "Setup PHP Action"
       uses: "shivammathur/setup-php@v2"
@@ -21,10 +21,10 @@ jobs:
     - name: "Install dependencies with Composer"
       uses: "ramsey/composer-install@v1"
       with:
-        composer-options: "--prefer-dist --no-progress --no-suggest"
+        composer-options: "--prefer-dist --no-progress"
 
     - name: "PHPStan"
-      run: vendor/bin/phpstan analyse
+      run: "vendor/bin/phpstan analyse"
 
     - name: "Psalm"
-      run: vendor/bin/psalm
+      run: "vendor/bin/psalm"
