--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: "Tests"
 
 on:
   - "push"
@@ -7,7 +7,7 @@ on:
 jobs:
   tests:
 
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     continue-on-error: "${{ matrix.continue-on-error }}"
     strategy:
       matrix:
@@ -20,14 +20,14 @@ jobs:
            continue-on-error: true
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: "actions/checkout@v2"
 
     - name: "Cache Composer packages"
       id: "composer-cache"
-      uses: actions/cache@v2
+      uses: "actions/cache@v2"
       with:
         path: "vendor"
-        key: ${{ runner.os }}-php-${{ matrix.php-versions }}-${{ hashFiles('**/composer.lock') }}
+        key: "${{ runner.os }}-php-${{ matrix.php-versions }}-${{ hashFiles('**/composer.lock') }}"
         restore-keys: |
           "${{ runner.os }}-php-"
 
@@ -39,14 +39,14 @@ jobs:
 
     - name: "Install dependencies"
       if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions != '8.2'
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: "composer install --prefer-dist --no-progress"
 
     - name: "Install dependencies"
       if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions == '8.2'
-      run: composer install --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
+      run: "composer install --prefer-dist --no-progress --ignore-platform-reqs"
 
     - name: "Unit + Integration"
-      run: vendor/bin/phpunit
+      run: "vendor/bin/phpunit"
 
     - name: "Mutation tests"
-      run: vendor/bin/infection --min-msi=98 --no-progress --threads=5
+      run: "vendor/bin/infection --min-msi=98 --no-progress --threads=5"
