Use ramsey/composer-install for tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,23 +13,17 @@ jobs:
       matrix:
         include:
          - php-versions: "8.1"
+           composer-option: ""
            continue-on-error: false
          - php-versions: "8.2"
+           composer-option: ""
            continue-on-error: false
          - php-versions: "8.3"
+           composer-option: "--ignore-platform-reqs"
            continue-on-error: true
 
     steps:
     - uses: "actions/checkout@v3"
-
-    - name: "Cache Composer packages"
-      id: "composer-cache"
-      uses: "actions/cache@v2"
-      with:
-        path: "vendor"
-        key: "${{ runner.os }}-php-${{ matrix.php-versions }}-${{ hashFiles('**/composer.lock') }}"
-        restore-keys: |
-          "${{ runner.os }}-php-"
 
     - name: "Setup PHP Action"
       uses: "shivammathur/setup-php@v2"
@@ -37,16 +31,13 @@ jobs:
         php-version: "${{ matrix.php-versions }}"
         extensions: "intl, xdebug"
 
-    - name: "Install dependencies"
-      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions != '8.3'
-      run: "composer install --prefer-dist --no-progress"
-
-    - name: "Install dependencies"
-      if: steps.composer-cache.outputs.cache-hit != 'true' && matrix.php-versions == '8.3'
-      run: "composer install --prefer-dist --no-progress --ignore-platform-reqs"
+    - name: "Install dependencies with Composer"
+      uses: "ramsey/composer-install@v2"
+      with:
+        composer-options: "--prefer-dist --no-progress ${{ matrix.composer-option }}"
 
     - name: "Unit + Integration"
       run: "vendor/bin/phpunit"
 
     - name: "Mutation tests"
-      run: "vendor/bin/infection --min-msi=98 --no-progress --threads=5"
+      run: "vendor/bin/infection --min-msi=97 --no-progress --threads=5"
