Remove obsolete infection mutator ignore

--- a/infection.json.dist
+++ b/infection.json.dist
@@ -9,21 +9,6 @@
         "text": "infection-log.txt"
     },
     "mutators": {
-        "@default": true,
-        "IdenticalEqual": {
-            "ignore": [
-                "*"
-            ]
-        },
-        "NotIdenticalNotEqual": {
-            "ignore": [
-                "*"
-            ]
-        },
-        "CastObject": {
-            "ignore": [
-                "Budgegeria\\IntlSort\\Comparator\\ValueObject"
-            ]
-        }
+        "@default": true
     }
 }
