--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -27,4 +27,4 @@ jobs:
       run: "vendor/bin/phpstan analyse"
 
     - name: "Psalm"
-      run: "vendor/bin/psalm"
+      run: "vendor/bin/psalm --no-cache"
