--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,7 +1,15 @@
 parameters:
-    level: 8
+    level: 9
     paths:
         - "%currentWorkingDirectory%/src/"
         - "%currentWorkingDirectory%/tests/"
+
+    ignoreErrors:
+        -
+            message: '#Cannot cast mixed to string\.#'
+            paths:
+                - src/Collator/ConfigurableCollator.php
+                - tests/ComparatorFactory/CallableAccessTest.php
+
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
