--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ jobs:
            composer-option: ""
            continue-on-error: false
          - php-versions: "8.3"
+           composer-option: ""
+           continue-on-error: false
+         - php-versions: "8.4"
            composer-option: "--ignore-platform-reqs"
            continue-on-error: true
 
