--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "phpunit/phpunit": "^10.3",
     "psalm/plugin-phpunit": "^0.18.4",
     "vimeo/psalm": "^5.15",
-    "doctrine/coding-standard": "^12.0"
+    "doctrine/coding-standard": "^12.0",
+    "phpstan/phpstan-strict-rules": "^1.5"
   },
   "autoload": {
     "psr-4": {
