--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,3 +13,4 @@ parameters:
 
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
