--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "psalm/plugin-phpunit": "^0.19.0",
     "vimeo/psalm": "^5.23",
     "doctrine/coding-standard": "^12.0",
-    "phpstan/phpstan-strict-rules": "^1.5"
+    "phpstan/phpstan-strict-rules": "^1.5",
+    "phpstan/phpstan-deprecation-rules": "^1.2"
   },
   "autoload": {
     "psr-4": {
