--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,8 @@ jobs:
            composer-option: ""
            continue-on-error: false
          - php-versions: "8.4"
-           composer-option: "--ignore-platform-reqs"
-           continue-on-error: true
+           composer-option: ""
+           continue-on-error: false
          - php-versions: "8.5"
            composer-option: "--ignore-platform-reqs"
            continue-on-error: true
