--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,6 @@ jobs:
     strategy:
       matrix:
         include:
-         - php-versions: "8.2"
-           composer-option: ""
-           continue-on-error: false
          - php-versions: "8.3"
            composer-option: ""
            continue-on-error: false
@@ -40,7 +37,9 @@ jobs:
         composer-options: "--prefer-dist --no-progress ${{ matrix.composer-option }}"
 
     - name: "Unit + Integration"
-      run: "vendor/bin/phpunit"
+      run: "vendor/bin/phpunit"         - php-versions: "8.2"
+           composer-option: ""
+           continue-on-error: false
 
     - name: "Mutation tests"
       run: "vendor/bin/infection --min-msi=99 --no-progress --threads=5"
