--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ jobs:
            composer-option: ""
            continue-on-error: false
          - php-versions: "8.5"
+           composer-option: ""
+           continue-on-error: false
+         - php-versions: "8.6"
            composer-option: "--ignore-platform-reqs"
            continue-on-error: true
 
@@ -37,9 +40,7 @@ jobs:
         composer-options: "--prefer-dist --no-progress ${{ matrix.composer-option }}"
 
     - name: "Unit + Integration"
-      run: "vendor/bin/phpunit"         - php-versions: "8.2"
-           composer-option: ""
-           continue-on-error: false
+      run: "vendor/bin/phpunit"
 
     - name: "Mutation tests"
       run: "vendor/bin/infection --min-msi=99 --no-progress --threads=5"
